--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./public/dist/output.css --watch",
     "test": "vitest"
@@ -19,7 +19,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "react-use-websocket": "^4.3.1"
+    "react-use-websocket": "^4.3.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
